Add m1 Simd support