@@ -1,6 +1,7 @@
 package com.github.tjake.jlama.tensor.operations;
 
 
+import com.github.tjake.jlama.util.MachineSpec;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -10,20 +11,7 @@ import jdk.incubator.vector.VectorOperators;
 public class TensorOperationsProvider
 {
     private static final Logger logger = LoggerFactory.getLogger(TensorOperationsProvider.class);
-    private static boolean hasVectorAPI = hasVectorAPI();
 
-    private static boolean hasVectorAPI() {
-        try {
-            VectorOperators.ADD.name();
-            logger.info("Java 20+ Vector API available");
-            if (PanamaTensorOperations.hasAVX512)
-                logger.info("AVX512 operations available");
-            return true;
-        } catch (Throwable t) {
-            logger.warn("Java SIMD Vector API *not* available. Add --add-modules=jdk.incubator.vector to your JVM options");
-            return false;
-        }
-    }
     private static final String lock = "lock";
     private static TensorOperationsProvider instance;
     public static TensorOperations get() {
@@ -44,11 +32,12 @@ public class TensorOperationsProvider
 
     private TensorOperations pickFastestImplementaion() {
         try {
-            NativeSimd.accumulate_f16$MH();
-            return new NativeTensorOperations();
+           // NativeSimd.accumulate_f16$MH();
+            //return new NativeTensorOperations();
         } catch (Throwable t) {
             logger.info("Error loading native operations", t);
         }
-        return hasVectorAPI ? new PanamaTensorOperations() : new NaiveTensorOperations();
+
+        return MachineSpec.VECTOR_TYPE == MachineSpec.Type.NONE ? new NaiveTensorOperations() : new PanamaTensorOperations();
     }
 }
